// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`u-split-layout.vue Demo-基本用法 1`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-基本用法 2`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="horizontal" style="width: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="horizontal" style="width: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Middle
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-基本用法 3`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-基本用法 4`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="vertical" style="height: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="vertical" style="height: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Middle
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
    </div>
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-调整大小 1`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-调整大小 2`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="horizontal" style="width: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="horizontal" style="width: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Middle
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="horizontal">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-调整大小 3`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;

exports[`u-split-layout.vue Demo-调整大小 4`] = `
<div>
  <div class="root" style="width: 600px; height: 400px;">
    <div class="root" direction="vertical" style="height: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Left
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="vertical" style="height: 0px;">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Middle
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">
        </div>
        <div></div>
      </div>
      <div class="splitter" draggable="draggable"></div>
    </div>
    <div class="root" direction="vertical">
      <div bordered="true" class="root" shadow="always">
        <div class="head">
          <div class="title" vusion-slot-name="title" vusion-slot-name-edit="title">
            Right
          </div>
          <a></a>
          <div class="extra" vusion-slot-name="extra">
          </div>
        </div>
        <div class="body" vusion-slot-name="default">Some content
        </div>
        <div></div>
      </div>
    </div>
  </div>
</div>
`;
